added elementRef and fixed the rest

--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,4 +1,4 @@
-<app-header></app-header>
+<app-header id="header"></app-header>
 
 <div class="relative isolate flex items-center gap-x-6 overflow-hidden bg-gray-200 px-6 py-2.5 sm:px-3.5 sm:before:flex-1" *ngIf="this.notification == true">
   <div class="absolute left-[max(-7rem,calc(50%-52rem))] top-1/2 -z-10 -translate-y-1/2 transform-gpu blur-2xl" aria-hidden="true">
