--- a/src/app/projects/header/header.component.html
+++ b/src/app/projects/header/header.component.html
@@ -6,10 +6,10 @@
         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-10 h-10 text-white p-2 bg-indigo-500 rounded-full" viewBox="0 0 24 24">
           <path stroke-linecap="round" stroke-linejoin="round" d="M17.25 6.75 22.5 12l-5.25 5.25m-10.5 0L1.5 12l5.25-5.25m7.5-3-4.5 16.5" />
         </svg>      
-        <!-- <span class="ml-3 text-xl">{{ this.currentProjectTitle || "No project selected. Navigate back to home to select a project." }}</span> -->
+        <span class="ml-3 text-xl">{{ this.title || "No project selected. Navigate back to home to select a project." }}</span>
       </a>
       <nav class="md:mr-auto md:ml-4 md:py-1 md:pl-4 md:border-l md:border-gray-700	flex flex-wrap items-center text-base justify-center">
-        <!-- <a class="mr-5 hover:text-white" (click)="navigateToHome()">HOME</a> -->
+        <a class="mr-5 hover:text-white" (click)="navigateToHome()">HOME</a>
       </nav>
     </div>
   </header>
