added img and footer

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -8,74 +8,31 @@
           
           <span class="ml-3 text-xl">Personal Profile</span>
         </a>
-        <p class="mt-2 text-sm text-gray-500">Last time updated: 01/04/2024</p>
+        <p class="mt-2 text-sm text-gray-500">{{this.lastTimeUpdatet}}</p>
       </div>
       <div class="flex-grow flex flex-wrap md:pl-20 -mb-10 md:mt-0 mt-10 md:text-left text-center">
         <div class="lg:w-1/4 md:w-1/2 w-full px-4">
-          <h2 class="title-font font-medium text-white tracking-widest text-sm mb-3">CATEGORIES</h2>
+          <h2 class="title-font font-medium text-white tracking-widest text-sm mb-3">FRONT-END</h2>
           <nav class="list-none mb-10">
             <li>
-              <a class="text-gray-400 hover:text-white">First Link</a>
+              <a class="text-gray-400 hover:text-white">Tailwind & Tailblocks</a>
             </li>
             <li>
-              <a class="text-gray-400 hover:text-white">Second Link</a>
-            </li>
-            <li>
-              <a class="text-gray-400 hover:text-white">Third Link</a>
-            </li>
-            <li>
-              <a class="text-gray-400 hover:text-white">Fourth Link</a>
+              <a class="text-gray-400 hover:text-white">Bootstrap</a>
             </li>
           </nav>
         </div>
         <div class="lg:w-1/4 md:w-1/2 w-full px-4">
-          <h2 class="title-font font-medium text-white tracking-widest text-sm mb-3">CATEGORIES</h2>
+          <h2 class="title-font font-medium text-white tracking-widest text-sm mb-3">TOOLS</h2>
           <nav class="list-none mb-10">
             <li>
-              <a class="text-gray-400 hover:text-white">First Link</a>
+              <a class="text-gray-400 hover:text-white">Git & Github</a>
             </li>
             <li>
-              <a class="text-gray-400 hover:text-white">Second Link</a>
+              <a class="text-gray-400 hover:text-white">Render</a>
             </li>
             <li>
-              <a class="text-gray-400 hover:text-white">Third Link</a>
-            </li>
-            <li>
-              <a class="text-gray-400 hover:text-white">Fourth Link</a>
-            </li>
-          </nav>
-        </div>
-        <div class="lg:w-1/4 md:w-1/2 w-full px-4">
-          <h2 class="title-font font-medium text-white tracking-widest text-sm mb-3">CATEGORIES</h2>
-          <nav class="list-none mb-10">
-            <li>
-              <a class="text-gray-400 hover:text-white">First Link</a>
-            </li>
-            <li>
-              <a class="text-gray-400 hover:text-white">Second Link</a>
-            </li>
-            <li>
-              <a class="text-gray-400 hover:text-white">Third Link</a>
-            </li>
-            <li>
-              <a class="text-gray-400 hover:text-white">Fourth Link</a>
-            </li>
-          </nav>
-        </div>
-        <div class="lg:w-1/4 md:w-1/2 w-full px-4">
-          <h2 class="title-font font-medium text-white tracking-widest text-sm mb-3">CATEGORIES</h2>
-          <nav class="list-none mb-10">
-            <li>
-              <a class="text-gray-400 hover:text-white">First Link</a>
-            </li>
-            <li>
-              <a class="text-gray-400 hover:text-white">Second Link</a>
-            </li>
-            <li>
-              <a class="text-gray-400 hover:text-white">Third Link</a>
-            </li>
-            <li>
-              <a class="text-gray-400 hover:text-white">Fourth Link</a>
+              <a class="text-gray-400 hover:text-white">VS Code</a>
             </li>
           </nav>
         </div>
@@ -83,7 +40,7 @@
     </div>
     <div class="bg-gray-800 bg-opacity-75">
       <div class="container mx-auto py-4 px-5 flex flex-wrap flex-col sm:flex-row">
-        <p class="text-gray-400 text-sm text-center sm:text-left">© 2020 Tailblocks —
+        <p class="text-gray-400 text-sm text-center sm:text-left">© 2023 My Portfolio —
           <a href="https://twitter.com/knyttneve" rel="noopener noreferrer" class="text-gray-500 ml-1" target="_blank"></a>
         </p>
         <span class="inline-flex sm:ml-auto sm:mt-0 mt-2 justify-center sm:justify-start">
