added loading screen

--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,7 +1,7 @@
 <app-header id="header"></app-header>
 
-<div *ngIf="!this.currentProjectData" class="bg-gray-900 d-flex justify-center py-10">
-  <h1 class="text-slate-100">DATA IS LOADING...</h1>
+<div *ngIf="!this.currentProjectData" class="bg-gray-900 d-flex justify-center py-28">
+  <h1 class="text-slate-100 text-xl">DATA IS LOADING...</h1>
 </div>
 
 <div *ngIf="this.currentProjectData">
