added data loading for projects

--- a/src/app/home/project-overview/project-overview.component.html
+++ b/src/app/home/project-overview/project-overview.component.html
@@ -1,3 +1,7 @@
+<div *ngIf="!this.isLoaded">
+  <h3>DATA IS LOADING</h3>
+</div>
+
 
 <section id="projects" class="text-gray-400 body-font bg-gray-900">
     <div class="container px-5 py-24 mx-auto">
