improved data loading

--- a/src/app/home/project-overview/project-overview.component.html
+++ b/src/app/home/project-overview/project-overview.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="!this.isLoaded">
+<div *ngIf="!this.isLoaded" class="bg-gray-900 d-flex justify-center">
   <h3>DATA IS LOADING</h3>
 </div>
 
