--- a/src/app/home/start/start.component.html
+++ b/src/app/home/start/start.component.html
@@ -1,10 +1,10 @@
 <section id="home" class="mt-5 background content-center">
-    <div class="container mx-auto flex px-5 py-24 md:flex-row flex-col items-center">
-      <div class="lg:flex-grow md:w-1/2 lg:pr-24 md:pr-16 flex flex-col md:items-start md:text-left mb-16 md:mb-0 items-center text-center">
+    <div class="container mx-auto flex px-5 py-24 d-flex justify-evenly md:flex-row flex-col items-center">
+      <div class="lg:flex-grow flex flex-col items-center text-center">
         <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-white" id="mytitle">Hi, I'm <span class="fw-bold my-name ta-l" id="my-name" style="margin-left: 7px;">Olivier Chodura</span>,<br>A Full stack Developer from Poland.</h1>
         <p class="mb-8 text-white">This is my official Portfolio to showcase all my works related to programming</p>
       </div>
-      <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6">
+      <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6 img-con">
         <img class="object-cover object-center rounded image-of-me smaller-image" alt="hero" src="../../../assets/img/img-of-me/1.jpg">
       </div>
     </div>
