--- a/src/app/home/start/start.component.html
+++ b/src/app/home/start/start.component.html
@@ -3,7 +3,7 @@
   <div class="container mx-auto flex px-5 py-24 md:flex-row flex-col items-center">
     <div class="lg:flex-grow md:w-1/2 lg:pr-24 md:pr-16 flex flex-col md:items-start md:text-left mb-16 md:mb-0 items-center text-center">
       <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-white" id="mytitle">Hi, I'm <span class="fw-bold my-name ta-l text-blue-400" id="my-name" style="margin-left: 7px;">Olivier Chodura</span>,<br>A Full stack Developer from Poland🇵🇱 </h1>
-      <p class="mb-8 leading-relaxed text-white">This is my official Portfolio to showcase all my works related to programming.</p>
+      <p class="mb-8 leading-relaxed text-white text-xl">This is my official Portfolio to showcase all my works related to programming.</p>
       <div class="flex justify-center">
         <div class="mx-8">
           <a href="https://www.instagram.com/olus.progr/">
