--- a/src/app/home/project-overview/project-overview.component.html
+++ b/src/app/home/project-overview/project-overview.component.html
@@ -1,5 +1,5 @@
-<div *ngIf="!this.isLoaded" class="bg-gray-900 d-flex justify-center">
-  <h3>DATA IS LOADING</h3>
+<div *ngIf="!this.isLoaded" class="bg-gray-900 d-flex justify-center text-white">
+  <h3>DATA IS LOADING...</h3>
 </div>
 
 
